--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -94,9 +94,9 @@
 
     @include tablet {
       display: grid;
-      grid-template-columns: 0.89fr 0.7fr 0.7fr 0.6fr 0.2fr 0.6fr;
+      grid-template-columns: repeat(6, 1fr);
       align-items: center;
-      grid-gap: 1rem;
+      gap: 0;
       padding: 0 2rem;
       background-color: $color-lightgrey;
       height: 2.5rem;
@@ -104,7 +104,7 @@
 
     @include desktop {
       padding: 0 2.5rem;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: repeat(6, 1fr);
     }
 
   }
@@ -116,6 +116,7 @@
       display: block;
       @include flexbox(row, .25rem);
       align-items: center;
+      white-space: nowrap;
 
       &--category {
         grid-column: 2;
